removed display:inline-block (.squares now have display:block, as per default), added float:left; gaps between lines are no longer present

--- a/css/sketchpad.css
+++ b/css/sketchpad.css
@@ -5,7 +5,7 @@
 }
 
 .square {
-	display: inline-block;
+	float: left;
 	height: 30px;
 	width: 30px;
 	background-color: #000000;
